# cs371

./: .tool-versions  README.md  hw1_20160722.ipynb  pyproject.toml
assignment2/: assignment2.ipynb  conv_best.pt  inception_best.pt  resBottleneck_best.pt  resPlain_best.pt
assignment3/: assignment3.ipynb
