[tool.poetry]
name = "cs371"
version = "0.1.0"
description = ""
authors = ["Jaeyoung <akqq24@kaist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
scipy = "1.13.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
tqdm = "^4.66.5"
torch = "^2.4.1"
torchvision = "^0.19.1"
easydict = "^1.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
